load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "vp9_proto",
    srcs = ["vp9.proto"]
)

cc_proto_library(
    name = "vp9_cc_proto",
    deps = [":vp9_proto"],
)

cc_binary(
    name = "proto_to_vp9",
    srcs = ["proto_to_vp9.cpp",
            "vp9_constants.h"],
    deps = [":vp9_cc_proto"],
)

cc_binary(
    name = "vp9_to_proto",
    srcs = ["vp9_to_proto.cpp",
            "vp9_constants.h"],
    deps = [":vp9_cc_proto"],
)