load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "vp9_proto",
    srcs = ["vp9.proto"]
)

cc_proto_library(
    name = "vp9_cc_proto",
    deps = [":vp9_proto"],
)

cc_binary(
    name = "proto_to_vp9",
    srcs = ["proto_to_vp9.cpp",
            "vp9_constants.h"],
    deps = [":vp9_cc_proto"],
)

cc_binary(
    name = "vp9_to_proto",
    srcs = ["vp9_to_proto.cpp",
            "vp9_constants.h",
            "arithmetic_coding/AdaptiveArithmeticCompress.cpp",
            "arithmetic_coding/AdaptiveArithmeticDecompress.cpp",
            "arithmetic_coding/ArithmeticCoder.cpp",
            "arithmetic_coding/ArithmeticCoder.hpp",
            "arithmetic_coding/ArithmeticCompress.cpp",
            "arithmetic_coding/ArithmeticDecompress.cpp",
            "arithmetic_coding/BitIoStream.cpp",
            "arithmetic_coding/BitIoStream.hpp",
            "arithmetic_coding/FrequencyTable.cpp",
            "arithmetic_coding/FrequencyTable.hpp",
            "arithmetic_coding/PpmCompress.cpp",
            "arithmetic_coding/PpmDecompress.cpp",
            "arithmetic_coding/PpmModel.cpp",
            "arithmetic_coding/PpmModel.hpp"
            ],
    deps = [":vp9_cc_proto"],
)